[gd_scene load_steps=10 format=3 uid="uid://b3wbggngf6n3r"]

[ext_resource type="PackedScene" uid="uid://cvymy7gb02v2a" path="res://Scenes/Paddle/Paddle.tscn" id="1_p8rbg"]
[ext_resource type="Script" uid="uid://blafkvtf7ie54" path="res://Scenes/Main/Main.gd" id="1_w20t6"]
[ext_resource type="FontFile" uid="uid://eegatg5txbex" path="res://assets/Kenney Pixel Square.ttf" id="2_aw1lf"]
[ext_resource type="PackedScene" uid="uid://dwslk8xhgo38l" path="res://Scenes/Border/Border.tscn" id="2_qtv3y"]
[ext_resource type="PackedScene" uid="uid://ch1n15ena1s5c" path="res://Scenes/Paddle2/Paddle2.tscn" id="3_cmk6n"]
[ext_resource type="PackedScene" uid="uid://c00rwang3cw17" path="res://Scenes/ScoreDetect/ScoreDetect.tscn" id="6_aw1lf"]
[ext_resource type="AudioStream" uid="uid://d3gmq1vkc6mo" path="res://assets/toggle_002.ogg" id="7_aw1lf"]

[sub_resource type="LabelSettings" id="LabelSettings_5s61s"]
font = ExtResource("2_aw1lf")
font_size = 36

[sub_resource type="CanvasTexture" id="CanvasTexture_qtv3y"]

[node name="Main" type="Node2D"]
script = ExtResource("1_w20t6")
metadata/_edit_vertical_guides_ = [640.0]

[node name="UI" type="CanvasLayer" parent="."]

[node name="MC" type="MarginContainer" parent="UI"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_constants/margin_top = 12

[node name="ScoreLabel" type="Label" parent="UI/MC"]
layout_mode = 2
size_flags_horizontal = 4
text = "0    0"
label_settings = SubResource("LabelSettings_5s61s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Border" parent="." instance=ExtResource("2_qtv3y")]
position = Vector2(315, 5)
scale = Vector2(69.2, 1)

[node name="Border2" parent="." instance=ExtResource("2_qtv3y")]
position = Vector2(315, 355)
scale = Vector2(69.2, 1)

[node name="Divider" type="Sprite2D" parent="."]
position = Vector2(318, 180)
scale = Vector2(10, 360)
texture = SubResource("CanvasTexture_qtv3y")

[node name="Paddle" parent="." instance=ExtResource("1_p8rbg")]
position = Vector2(26, 180)

[node name="Paddle2" parent="." instance=ExtResource("3_cmk6n")]
position = Vector2(614, 180)

[node name="ScoreDetectLeft" parent="." instance=ExtResource("6_aw1lf")]

[node name="ScoreDetectRight" parent="." instance=ExtResource("6_aw1lf")]
position = Vector2(640, 0)

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_aw1lf")

[connection signal="body_entered" from="ScoreDetectLeft" to="." method="_on_score_detect_left_body_entered"]
[connection signal="body_entered" from="ScoreDetectRight" to="." method="_on_score_detect_right_body_entered"]
